# hass-volvooncall-cn

./: .gitignore  LICENSE  README.md  README.org  hacs.json  setup.cfg
.github/workflows/: release.yaml
custom_components/: mainifest.json
custom_components/volvooncall_cn/: __init__.py  binary_sensor.py  button.py  config_flow.py  device_tracker.py  lock.py  manifest.json  number.py  sensor.py  sign.py  store.py  strings.json  switch.py  volvooncall_base.py  volvooncall_cn.py
custom_components/volvooncall_cn/proto/: availability.proto  availability_pb2.py  availability_pb2.pyi  availability_pb2_grpc.py  car_preferences.proto  car_preferences_pb2.py  car_preferences_pb2.pyi  car_preferences_pb2_grpc.py  dtlinternet.proto  dtlinternet_pb2.py  dtlinternet_pb2.pyi  dtlinternet_pb2_grpc.py  engineremotestart.proto  engineremotestart_pb2.py  engineremotestart_pb2.pyi  engineremotestart_pb2_grpc.py  exterior.proto  exterior_pb2.py  exterior_pb2.pyi  exterior_pb2_grpc.py  fuel.proto  fuel_pb2.py  fuel_pb2.pyi  fuel_pb2_grpc.py  health.proto  health_pb2.py  health_pb2.pyi  health_pb2_grpc.py  invocation.proto  invocation_pb2.py  invocation_pb2.pyi  invocation_pb2_grpc.py  odometer.proto  odometer_pb2.py  odometer_pb2.pyi  odometer_pb2_grpc.py
custom_components/volvooncall_cn/translations/: en.json  zh-Hans.json
volvooncall_cn/: volvooncall_cn.py
