[bumpversion]
current_version = 0.0.1
commit = True
tag = False
files = volvooncall_cn/volvooncall_cn.py

[metadata]
name = volvooncall_cn
version = 0.0.1
url = https://github.com/idreamshen/volvooncall_cn
license = Unlicense

[options]
packages =
	volvooncall_cn
install_requires =
	aiohttp<4.0
python_requires = >=3.10

[flake8]
exclude = .venv,.git,.tox,include,lib,bin,.tox,.tmp
import-order-style = pep8

[pytype]
inputs = volvooncall_cn
python_version = 3.10
disable =
	module-attr,
	attribute-error,
	import-error